vn.members: update groups

--- a/content/vn/members/index.html
+++ b/content/vn/members/index.html
@@ -13,10 +13,10 @@ lòng liên hệ `n0b0dy`.
 * **Sinh viên:**
     [n0b0dy], [NgoHuy] [], luffy,
     VHNgoc, [redlotus] [], Mitsuki, BiAlan
-* **Giáo dục:** tanphu, favadi, lamhuuphuoc
+* **Giáo viên:** tanphu, lamhuuphuoc
 * **Lập trình viên:** zosolz, gialong, fta
 * **Điều hành hệ thống:** [stk] [], [KyAnh] [], Cooly
-* **Khác:** cube, longgia2001, rmrf, Minh Nhật, n0bawk
+* **Khác:** cube, longgia2001, rmrf, Minh Nhật, n0bawk, favadi
 
 # Máy dùng ArchLinux
 
