vn.members.contributors: fix typo

--- a/content/vn/members/contributors.html
+++ b/content/vn/members/contributors.html
@@ -24,7 +24,7 @@ Tiền để duy trì tên miền chính `archlinuxvn.org` là 12 đô la mỗi 
 ArchLinuxVn luôn chấp nhận các khoản đóng góp để duy trì tên miền.
 Hãy liên lạc với <contact@archlinuxvn.org> để biết thêm chi tiết.
 
-* [Mirro chính] [Main mirror]: [Tuxfamily] []
+* [Mirror chính] [Main mirror]: [Tuxfamily] []
 * [Tên miền chính] [Main domain]: z1y _(1 year)_
 * Hosting cho tên miền chính: l00s3r
 
