vn.news: it is offline 7 now

--- a/content/vn/news.html
+++ b/content/vn/news.html
@@ -1,10 +1,10 @@
 ---
 title: news - Tin tức
 allow_comment: yes
-tags: ['archlinuxvn']
+tags: ['archlinuxvn', 'offline']
 ---
 
-* *??/12/2012:* Họp mặt cuối năm 2012. Đăng ký tham gia có ở [doodle6] [].
+* *??/12/2012:* Họp mặt cuối năm 2012. Đăng ký tham gia có ở [doodle7] [].
 
 * *16/9/2012:* [Họp mặt để nhận áo thun với logo ArchLinux] [offline6]
 
@@ -28,4 +28,4 @@ tags: ['archlinuxvn']
 [doodle5]: http://www.doodle.com/2ymbq9y23rb2dhfs
 [offline6]: https://groups.google.com/group/archlinuxvn/browse_thread/thread/ce1b57e8cc451bdb?hl=en
 [saigonlug]: http://groups.google.com/group/saigonlug/browse_thread/thread/65ab2c978204c3d8
-[doodle6]: http://doodle.com/dput2at7fd5cxptx
+[doodle7]: http://doodle.com/dput2at7fd5cxptx
