vn.news: update links to offline7

--- a/content/vn/news.html
+++ b/content/vn/news.html
@@ -5,6 +5,7 @@ tags: ['archlinuxvn', 'offline']
 ---
 
 * *??/12/2012:* Họp mặt cuối năm 2012. Đăng ký tham gia có ở [doodle7] [].
+  Thông báo trên nhóm thư có ở [offline7] [].
 
 * *16/9/2012:* [Họp mặt để nhận áo thun với logo ArchLinux] [offline6]
 
@@ -29,3 +30,4 @@ tags: ['archlinuxvn', 'offline']
 [offline6]: https://groups.google.com/group/archlinuxvn/browse_thread/thread/ce1b57e8cc451bdb?hl=en
 [saigonlug]: http://groups.google.com/group/saigonlug/browse_thread/thread/65ab2c978204c3d8
 [doodle7]: http://doodle.com/dput2at7fd5cxptx
+[offline7]: https://groups.google.com/group/archlinuxvn/browse_thread/thread/dede51ded71e99b2
