vn.lists: + security group

--- a/content/vn/lists.html
+++ b/content/vn/lists.html
@@ -17,13 +17,15 @@ nhắc nhiều hơn.
 
 Có hai nhóm được cung cấp bởi GoogleGroups:
 
-* [archlinuxvn] [list-main] là nơi trao đổi chung, giúp đỡ, thông báo
-* [archlinuxvn-dot] [list-devel] là nơi trao đổi về các dự án của ArchLinuxVn
+* [archlinuxvn] [list-main] là nơi trao đổi chung, giúp đỡ, thông báo;
+* [archlinuxvn-dot] [list-devel] là nơi trao đổi về các dự án của ArchLinuxVn;
+* [archlinuxvn-security] [list-security] để trao đổi về bảo mật và an toàn dữ liệu.
 
 Để đăng ký vào các nhóm thư này, bạn có thể dùng giao diện web, hoặc
 gửi thư bất kỳ tới địa chỉ
-  <mailto:archlinuxvn+subscribe@googlegroups.com> hoặc
-  <mailto:archlinuxvn-dot+subscribe@googlegroups.com>.
+  <mailto:archlinuxvn+subscribe@googlegroups.com>,
+  <mailto:archlinuxvn-dot+subscribe@googlegroups.com>, hoặc
+  <mailto:archlinuxvn-security+subscribe@googlegroups.com>.
 
 ## Quy tắc ứng xử
 
@@ -98,4 +100,5 @@ hãy bình tĩnh và trao đổi với các điều hành viên khác, trước 
 
 [list-main]:  http://groups.google.com/group/archlinuxvn/
 [list-devel]: http://groups.google.com/group/archlinuxvn-dot/
+[list-security]: http://groups.google.com/group/archlinuxvn-security/
 [irc-rules]: /vn/irc/
