vn.members: update wm info

--- a/content/vn/members/index.html
+++ b/content/vn/members/index.html
@@ -37,7 +37,7 @@ Danh sách máy của các thành viên. Nhân mặc định là 64 bít, các n
 |luffy        |-----08-25|3.5.3-1     |dwm      |
 |marchkit     |-----09-02|_latest_      |KDE      |
 |hatchery     |-----10-03|_latest_      |         |
-|icy office   |--------17|3.5.3-1     |e17      |
+|icy office   |--------17|3.5.3-1     |e17, xfce4 + freenx|
 |redlotus     |????-??-??|3.4.6-1     |<s>monsterwm</s>, KDE|
 
 _(*): Nhân 32 bits (kiến trúc của máy tính có thể là 64 bits.)_
