--- a/content/vn/members/index.html
+++ b/content/vn/members/index.html
@@ -30,14 +30,14 @@ Danh sách máy của các thành viên. Nhân mặc định là 64 bít, các n
 |icy laptop   |-----10-18|3.6.7-1-pae |e17      |
 |dragula-lc0  |-----11-06|2.6.39      |         |
 |NgoHuy       |2011-06-02|3.4.6-1     |Gnome3   |
-|Goodtrans    |-----11-10|3.4.9-1     |         |
+|Goodtrans    |-----11-10|3.6.3-1     |         |
 |n0bawk       |2012-01-12|3.4.9-1     |awesome+lxde  |
 |[l00s3r][]   |-----04-25|3.0.40-1-lts|         |
 |n0b0dy       |-----08-09|3.4.8-1     |lxde     |
 |luffy        |-----08-25|3.5.3-1     |dwm      |
 |marchkit     |-----09-02|_latest_      |KDE      |
 |hatchery     |-----10-03|_latest_      |         |
-|icy office   |--------17|3.5.3-1     |e17, xfce4 + freenx|
+|icy office   |--------17|3.6.10-1     |xfce4 + freenx|
 |redlotus     |????-??-??|3.4.6-1     |<s>monsterwm</s>, KDE|
 
 _(*): Nhân 32 bits (kiến trúc của máy tính có thể là 64 bits.)_
