vn.news: update offline7 info.

--- a/content/vn/news.html
+++ b/content/vn/news.html
@@ -4,7 +4,7 @@ allow_comment: yes
 tags: ['archlinuxvn', 'offline']
 ---
 
-* *??/12/2012:* Họp mặt cuối năm 2012. Đăng ký tham gia có ở [doodle7] [].
+* *23/12/2012:* Họp mặt cuối năm 2012. Đăng ký tham gia có ở [doodle7] [].
   Thông báo trên nhóm thư có ở [offline7] [].
 
 * *16/9/2012:* [Họp mặt để nhận áo thun với logo ArchLinux] [offline6]
