--- a/content/faq/what_is_archlinux.html
+++ b/content/faq/what_is_archlinux.html
@@ -4,6 +4,12 @@ allow_comment: yes
 tags: ['faq', 'archlinux']
 ---
 
+
+> **Ghi chú ngày 3/1/2013:** Arch đã thay đổi rất nhiều so với từ khi mới
+> ra đời. Các ý tưởng chính của Arch đã thay đổi và trở thành [Arch Way v2.0] [].
+> Các chi tiết trong bài này có thể không còn đúng và sẽ được điều chỉnh
+> sớm.
+
 ArchLinux là hệ điều hành sử dụng [nhân Linux] [Linux]. Không giống như
 Redhat, Mandrake, Ubuntu, Mint và nhiều hệ điều hành Linux khác,
 ArchLinux có các điểm khác biệt cơ bản sau
