--- a/content/faq/what_is_archlinux.html
+++ b/content/faq/what_is_archlinux.html
@@ -98,3 +98,4 @@ giỏi giang đang dùng ArchLinux cho công việc của họ.
 
 [Linux]: /faq/what_is_linux/
 [pacman]: /doc/newbie/pacman
+[Arch Way v2.0]: https://wiki.archlinux.org/index.php/The_Arch_Way_v2.0
