vn.irc: fix typo

--- a/content/vn/irc.html
+++ b/content/vn/irc.html
@@ -64,7 +64,7 @@ lý và nhắc nhở, khi đó nếu bạn đang nói lạc đề thì hãy nhan
 Các đoạn mã, `log`,... các đoạn trao đổi dài không nên ghi trực tiếp trên
 kênh, mà thông qua dịch vụ như [Pastebin.com] []. Để gửi hình ảnh, bạn đừng
 nên dùng `ImageHack.us` do dịch vụ này bị chặn ở nhiều nơi. Bạn có thể dùng
-chẳng hạng [PostImage.org] [].
+chẳng hạn [PostImage.org] [].
 
 ## Điều hành kênh
 
