vn.irc: update format

--- a/content/vn/members/contributors.html
+++ b/content/vn/members/contributors.html
@@ -7,6 +7,9 @@ tags: ['archlinuxvn', 'contributor']
 * Mục lục
 {:toc}
 
+## Phụ trách các bộ phận
+
+Xem ở  [trang này](workers).
 
 ## Áo thun ArchLinux tháng 9 / 2012
 
