vn.author-guide: nanoc wtf!?

--- a/content/vn/author-guide.html
+++ b/content/vn/author-guide.html
@@ -121,10 +121,9 @@ viết bài bằng cú pháp `markdown`. Thông tin bổ ích cho việc viết 
 
 8. _(Nếu bạn có tài khoản ở Github)_ Các thay đổi trên nhánh `master` sẽ
    được gửi lên `mirror` ở [github.mirror] [github]. Nhờ đó các thay
-   đổi có thể theo dõi được nhờ giao diện web của Github, như
-   [github.example] [ví dụ này]. Nếu bạn có tài khoản ở Github, bạn có
-   thể yêu cầu quyền ghi vào kho của trang chủ ở github, rồi sau đó từ dòng
-   lênh thêm vào `remote` mới
+   đổi có thể theo dõi được nhờ giao diện web của Github, như [github.example] [ví dụ này].
+   Nếu bạn có tài khoản ở Github, bạn có thể yêu cầu quyền ghi vào kho
+   của trang chủ ở github, rồi sau đó từ dòng lệnh thêm vào `remote` mới
 
        $ cd /path/to/your/archlinux/clone/
        $ git remote add github git@github.com:archlinuxvn/home.git
