vn.author-guide: nanoc wtf!?

--- a/content/vn/author-guide.html
+++ b/content/vn/author-guide.html
@@ -121,7 +121,7 @@ viết bài bằng cú pháp `markdown`. Thông tin bổ ích cho việc viết 
 
 8. _(Nếu bạn có tài khoản ở Github)_ Các thay đổi trên nhánh `master` sẽ
    được gửi lên `mirror` ở [github.mirror] [github]. Nhờ đó các thay
-   đổi có thể theo dõi được nhờ giao diện web của Github, như [github.example] [ví dụ này].
+   đổi có thể theo dõi được nhờ giao diện web của Github, như [example1] [ví dụ này].
    Nếu bạn có tài khoản ở Github, bạn có thể yêu cầu quyền ghi vào kho
    của trang chủ ở github, rồi sau đó từ dòng lệnh thêm vào `remote` mới
 
@@ -311,4 +311,4 @@ mã nguồn của các bài viết tại [github] [].
 [Vim-Python3]: /blog/~redlotus/vim_and_python3/
 [smilies]: /i/sm/
 [github.mirror]: https://github.com/archlinuxvn/home/
-[github.example]: https://github.com/archlinuxvn/home/commit/025daa7/
+[example1]: https://github.com/archlinuxvn/home/commit/025daa7/
