vn.author-guide: nanoc wtf!?

--- a/content/vn/author-guide.html
+++ b/content/vn/author-guide.html
@@ -120,7 +120,7 @@ viết bài bằng cú pháp `markdown`. Thông tin bổ ích cho việc viết 
    trước khi quyết định!
 
 8. _(Nếu bạn có tài khoản ở Github)_ Các thay đổi trên nhánh `master` sẽ
-   được gửi lên `mirror` ở [github.mirror] [github]. Nhờ đó các thay
+   được gửi lên [github.mirror] [mirror]. Nhờ đó các thay
    đổi có thể theo dõi được nhờ giao diện web của Github, như [example1] [ví dụ này].
    Nếu bạn có tài khoản ở Github, bạn có thể yêu cầu quyền ghi vào kho
    của trang chủ ở github, rồi sau đó từ dòng lệnh thêm vào `remote` mới
