--- a/content/vn/author-guide.html
+++ b/content/vn/author-guide.html
@@ -120,7 +120,7 @@ viết bài bằng cú pháp `markdown`. Thông tin bổ ích cho việc viết 
    trước khi quyết định!
 
 8. _(Nếu bạn có tài khoản ở Github)_ Các thay đổi trên nhánh `master` sẽ
-   được gửi lên [github.mirror] [mirror]. Nhờ đó các thay
+   được gửi lên [mirror] []. Nhờ đó các thay
    đổi có thể theo dõi được nhờ giao diện web của Github, như [example1] [ví dụ này].
    Nếu bạn có tài khoản ở Github, bạn có thể yêu cầu quyền ghi vào kho
    của trang chủ ở github, rồi sau đó từ dòng lệnh thêm vào `remote` mới
@@ -310,5 +310,5 @@ mã nguồn của các bài viết tại [github] [].
 [n0b0dy_arch_install]: /blog/~n0b0dy/install_archlinux_newbie/
 [Vim-Python3]: /blog/~redlotus/vim_and_python3/
 [smilies]: /i/sm/
-[github.mirror]: https://github.com/archlinuxvn/home/
+[mirror]: https://github.com/archlinuxvn/home/
 [example1]: https://github.com/archlinuxvn/home/commit/025daa7/
