vn.author-guide: another example

--- a/content/vn/author-guide.html
+++ b/content/vn/author-guide.html
@@ -120,8 +120,8 @@ viết bài bằng cú pháp `markdown`. Thông tin bổ ích cho việc viết 
    trước khi quyết định!
 
 8. _(Nếu bạn có tài khoản ở Github)_ Các thay đổi trên nhánh `master` sẽ
-   được gửi lên [mirror] []. Nhờ đó các thay đổi có thể theo dõi được
-   qua giao diện web của Github.
+   được gửi lên [mirror] []. Nhờ đó các thay
+   đổi có thể theo dõi được nhờ giao diện web của Github, như [example1] [].
    Nếu bạn có tài khoản ở Github, bạn có thể yêu cầu quyền ghi vào kho
    của trang chủ ở github, rồi sau đó từ dòng lệnh thêm vào `remote` mới
 
