vn.mem.workers: list update

--- a/content/vn/members/workers.html
+++ b/content/vn/members/workers.html
@@ -4,14 +4,13 @@ allow_comment: yes
 tags: ['archlinuxvn', 'contributor']
 ---
 
-* Mục lục
-{:toc}
+Danh sách thành viên với công việc điều  hành
 
-# Trang web
-
-* z1y: git repo và git hook trên máy `l00s3r`
-* z1y: máy phục vụ trang chủ `l00s3r`
-*
+* Nhóm thư chính: NgoHuy, n0b0dy, z1y
+* Trang chủ: z1y
+* Facebook FanPage: NgoHuy, z1y
+* Git repo: z1y
+* Kênh IRC: n0b0dy, z1y
 
 [Main mirror]: http://archlinuxvn.tuxfamily.org/
 [Tuxfamily]: http://tuxfafamily.org/
