members:contributors: fix link

--- a/content/vn/members/contributors.html
+++ b/content/vn/members/contributors.html
@@ -9,7 +9,7 @@ tags: ['archlinuxvn', 'contributor']
 
 ## Phụ trách các bộ phận
 
-Xem ở  [trang này](workers).
+Xem ở  [trang này](/vn/members/workers/).
 
 ## Áo thun ArchLinux tháng 9 / 2012
 
