--- a/content/vn/news.html
+++ b/content/vn/news.html
@@ -1,8 +1,11 @@
 ---
 title: news - Tin tức
 allow_comment: yes
-tags: ['archlinuxvn', 'offline']
+tags: ['archlinuxvn', 'offline', 'news']
 ---
+
+* *30/1/2013:* Bắt đầu dự án biên dịch tài liệu `systemd`. Xem thông báo
+   ở [nhóm thư] [systemd-vi].
 
 * *23/12/2012:* Họp mặt cuối năm 2012. Đăng ký tham gia có ở [doodle7] [].
   Thông báo trên nhóm thư có ở [offline7] [].
@@ -31,3 +34,4 @@ tags: ['archlinuxvn', 'offline']
 [saigonlug]: http://groups.google.com/group/saigonlug/browse_thread/thread/65ab2c978204c3d8
 [doodle7]: http://doodle.com/dput2at7fd5cxptx
 [offline7]: https://groups.google.com/group/archlinuxvn/browse_thread/thread/dede51ded71e99b2
+[systemd-vi]: http://groups.google.com/group/archlinuxvn/browse_thread/thread/78876fb3a9890416
