--- a/content/vn/members/index.html
+++ b/content/vn/members/index.html
@@ -4,11 +4,18 @@ allow_comment: yes
 tags: ['archlinuxvn']
 ---
 
-Danh sách thành viên của ArchLinuxVn (liệt kê theo thứ tự ngẫu nhiên).
-Danh sách này không đầy đủ. Để bổ sung thành viên vào danh sách này, vui
-lòng liên hệ `n0b0dy`.
+* ToC
+{:toc}
 
-Đóng góp của các thành viên được ghi nhận ở trang riêng [Contributors](contributors/).
+Đóng góp của các thành viên được ghi nhận ở trang [Contributors](contributors/).
+Công việc cụ thể của một số thành viên có ở [Workers](workers/).
+
+## Vài thành viên
+
+Vài thành viên của ArchLinuxVn (liệt kê theo thứ tự ngẫu nhiên).
+Danh sách này không đầy đủ và được dùng minh họa cho một số
+bộ cài đặt ArchLinux. Bạn có thể liên hệ những người quản lý để
+thêm vào dánh sách này.
 
 * **Sinh viên:**
     [n0b0dy], [NgoHuy] [], luffy,
@@ -18,31 +25,31 @@ lòng liên hệ `n0b0dy`.
 * **Điều hành hệ thống:** [stk] [], [KyAnh] [], Cooly
 * **Khác:** cube, longgia2001, rmrf, Minh Nhật, n0bawk, favadi
 
-# Máy dùng ArchLinux
+## Máy dùng ArchLinux
 
 Danh sách máy của các thành viên. Nhân mặc định là 64 bít, các nhân 32 bits
-được đánh dấu sao (*).
+được đánh dấu sao (*). Liệt kê theo ngày tháng cài đặt hệ thống (Xem mục `Mẹo`.)
 
-| Tên máy     | Cài đặt  | Nhân       |VM/DE    |Ghi chú|
-|:------------|:--------:|:----------:|:-------:||
-|longgia2001  |2007-09-27|3.5.3-1     |fluxbox  ||
-|zosolz       |2010-07-04|?.?.?-?     |xmonad   ||
-|icy laptop   |-----10-18|3.6.11-1-pae|e17      ||
-|dragula-lc0  |-----11-06|2.6.39      |         |tạm nghỉ|
-|NgoHuy       |2011-06-02|3.4.6-1     |Gnome3   ||
-|Goodtrans    |-----11-10|_latest_    |freenx   ||
-|n0bawk       |2012-01-12|3.4.9-1     |awesome+lxde||
-|[l00s3r][]   |-----04-25|3.0.60-1-lts|         ||
-|n0b0dy       |-----08-09|3.4.8-1     |lxde     ||
-|luffy        |-----08-25|3.5.3-1     |dwm      ||
-|marchkit     |-----09-02|_latest_    |KDE      ||
-|hatchery     |-----10-03|_latest_    |         ||
-|icy office   |--------17|3.6.10-1    |xfce4 + freenx|chết ngày 2013.jan.31|
-|redlotus     |????-??-??|3.4.6-1     |<s>monsterwm, KDE</s>||
+  | Tên máy     | Cài đặt  | Nhân       |VM/DE    |Ghi chú|
+  |:------------|:--------:|:----------:|:-------:||
+  |longgia2001  |2007-09-27|3.5.3-1     |fluxbox  ||
+  |zosolz       |2010-07-04|?.?.?-?     |xmonad   ||
+  |icy laptop   |-----10-18|3.6.11-1-pae|e17      ||
+  |dragula-lc0  |-----11-06|2.6.39      |         |tạm nghỉ|
+  |NgoHuy       |2011-06-02|3.4.6-1     |Gnome3   ||
+  |Goodtrans    |-----11-10|_latest_    |freenx   ||
+  |n0bawk       |2012-01-12|3.4.9-1     |awesome+lxde||
+  |[l00s3r][]   |-----04-25|3.0.60-1-lts|         ||
+  |n0b0dy       |-----08-09|3.4.8-1     |lxde     ||
+  |luffy        |-----08-25|3.5.3-1     |dwm      ||
+  |marchkit     |-----09-02|_latest_    |KDE      ||
+  |hatchery     |-----10-03|_latest_    |         ||
+  |icy office   |--------17|3.6.10-1    |xfce4 + freenx|chết ngày 2013.jan.31|
+  |redlotus     |????-??-??|3.4.6-1     |<s>monsterwm, KDE</s>||
 
 _(*): Nhân 32 bits (kiến trúc của máy tính có thể là 64 bits.)_
 
-# Mẹo
+## Mẹo
 
 Để kiểm tra bạn cài ArchLinux từ lúc nào, chạy lệnh
 
