vn.members.workers: fix typo

--- a/content/vn/members/workers.html
+++ b/content/vn/members/workers.html
@@ -24,7 +24,7 @@ Bạn luôn có thể liên hệ với họ thông qua các kênh chính thức 
 Còn rất nhiều việc cần bạn giúp đỡ. Nếu bạn có chút thời gian rỗi, hãy
 liên hệ với các thành viên khác để cùng làm vài việc thú vị nhé.
 
-Dưới đây là danh sách những việc đang cần bạn giúp đỡ.
+Dưới đây là danh sách những việc đang cần hỗ trợ.
 
 * Cung cấp tin trên kênh Twitter
 * Xác nhận thư rác trên một số nhóm thư
