vn.news: add ken news

--- a/content/vn/news.html
+++ b/content/vn/news.html
@@ -4,6 +4,8 @@ allow_comment: yes
 tags: ['archlinuxvn', 'offline', 'news']
 ---
 
+* *17/2/2013:* Bắt đầu dự án KenLinux. Xem ở [Ken FAQ](/ken/faq/)
+
 * *30/1/2013:* Bắt đầu dự án biên dịch tài liệu `systemd`. Xem thông báo
    ở [nhóm thư] [systemd-vi].
 
