--- a/content/vn/lists.html
+++ b/content/vn/lists.html
@@ -20,7 +20,7 @@ Có hai nhóm được cung cấp bởi GoogleGroups:
 * [archlinuxvn] [list-main] là nơi trao đổi chung, giúp đỡ, thông báo;
 * [archlinuxvn-dot] [list-devel] là nơi trao đổi về các dự án của ArchLinuxVn;
 * [archlinuxvn-security] [list-security] để trao đổi về bảo mật và an toàn dữ liệu;
-* [archlinuxvn-ket] [list-ken] là nơi trao đổi về [Ken Linux](/ken/).
+* [archlinuxvn-ken] [list-ken] là nơi trao đổi về [Ken Linux](/ken/).
 
 Để đăng ký vào các nhóm thư này, bạn có thể dùng giao diện web, hoặc
 gửi thư bất kỳ tới địa chỉ
