ken: update contact lists

--- a/content/ken/faq.html
+++ b/content/ken/faq.html
@@ -40,7 +40,8 @@ Dự kiến đến cuối năm 2013. Nhưng ai biết được :)
 
 ## Tham gia như thế nào
 
-Tạm thời, các bạn có thể trao đổi trên nhóm thư chính của [[ArchLinuxVn]].
+Tạm thời, các bạn có thể trao đổi trên nhóm thư chính của ArchLinuxVn
+hoặc nhóm thư chính của KenLinux. Xem ở [danh sách nhóm thư](/vn/lists/).
 
 ## Có ai trong đội phát triển
 
