vn.author-guide: add description for :license

--- a/content/vn/author-guide.html
+++ b/content/vn/author-guide.html
@@ -2,6 +2,7 @@
 title: Viết bài cho ArchLinuxVn
 allow_comment: yes
 tags: ['archlinuxvn', 'blog']
+license: GPL2
 ---
 
 ArchLinuxVn sử dụng [nanoc] [] để tạo trang
@@ -253,6 +254,11 @@ bài viết của bạn.
        title: Tựa đề bài viết
        tags: ['git', 'programming']
        ---
+
+4. Các bài viết mặc định được công bố với giấy phép `CC BY-NC-ND`. Để chỉ
+   ra giấy phép cụ thể, bạn dùng `license: foobar`. Một số giấy phép mà
+   thư viện `core` nhận biết thì sẽ có hiện ra thông tin tương đối hoàn
+   chỉnh, còn không thì chỉ hiện tên giấy phép mà bạn chỉ ra.
 
 ### Trình bày mã nguồn
 
