ken.faq: update TODO

--- a/content/ken/faq.html
+++ b/content/ken/faq.html
@@ -49,4 +49,11 @@ z1y, NgoHuy, và ... **bạn**
 
 ## Những việc gì cần làm
 
-TODO ;)
+* Tìm nguồn tài trợ để xây dựng máy biên dịch gói và nhân.
+  Xem thêm [Ken Builder](builder/)
+* Quản lý hệ thống, nhóm thư _(diễn đàn)_ và hệ thống `ticket`
+* Hỗ trợ xây dựng `mirror` chính
+* Lập trình viên `Ruby`, `Bash` và `Haskell`
+* Tư vấn về an toàn của hệ thống
+* Hỗ trợ tài chính
+* Và rất nhiều thứ khác
