bot, news: Add :nutshell feature

--- a/content/vn/bot.html
+++ b/content/vn/bot.html
@@ -19,12 +19,17 @@ Vài plugin cơ bản của bot
 
 * **hello:** Chào bạn khi có ai đó trên kênh chào bạn
 * **sensor:** Cảnh báo khi bạn văng tục. Sau lần cảnh báo đầu tiên,
-  bot im lặng chừng 10 phút trước khi cảnh báo lần tiếp theo.
+  `bot` im lặng chừng 10 phút trước khi cảnh báo lần tiếp theo. Mỗi lần
+  `bot` cảnh báo bạn sẽ bị mất 1 hạt dẻ.
 * **info:** Cung cấp thông tin cơ bản về nhóm ArchLinuxVn.
 * **xy:** Chơi oẳn-tù-tì (bao, búa, kéo) với `bot`. Ví dụ, khi bạn nhập
   vào `!xy bao` thì `bot` sẽ chọn ra vật ngẫu nhiên và xem ai thắng theo
-  quy tắc `búa > kéo > bao > búa`.
+  quy tắc `búa > kéo > bao > búa`. Khi thắng hoặc thua bạn sẽ được thêm
+  hoặc bớt một số ngẫu nhiên các hạt dẻ
+
+Thông tin về các `hạt dẻ` có thể xem trong [thông báo đầu tiên][nutshell].
 
 [irc]: /vn/irc/
 [botsrc]: https://github.com/archlinuxvn/irclog/
 [bot]: /vn/bot/
+[nutshell]: https://groups.google.com/group/archlinuxvn/browse_thread/thread/93b2b29c4fbe74e1
