--- a/content/vn/news.html
+++ b/content/vn/news.html
@@ -4,7 +4,9 @@ allow_comment: yes
 tags: ['archlinuxvn', 'offline', 'news']
 ---
 
-* *17/2/2013:* Bắt đầu dự án KenLinux. Xem ở [Ken FAQ](/ken/faq/)
+* *21/2/2013:* Thêm `hạt dẻ` cho [kênh IRC](/vn/irc/). [Thông báo ở nhóm thư][nutshell].
+
+* *17/2/2013:* Bắt đầu dự án KenLinux. Xem ở [Ken FAQ](/ken/faq/).
 
 * *30/1/2013:* Bắt đầu dự án biên dịch tài liệu `systemd`. Xem thông báo
    ở [nhóm thư] [systemd-vi].
@@ -32,8 +34,9 @@ tags: ['archlinuxvn', 'offline', 'news']
 
 [offline5]: http://groups.google.com/group/archlinuxvn/browse_thread/thread/d6df23e614c0fde3
 [doodle5]: http://www.doodle.com/2ymbq9y23rb2dhfs
-[offline6]: https://groups.google.com/group/archlinuxvn/browse_thread/thread/ce1b57e8cc451bdb?hl=en
+[offline6]: https://groups.google.com/group/archlinuxvn/browse_thread/thread/ce1b57e8cc451bdb
 [saigonlug]: http://groups.google.com/group/saigonlug/browse_thread/thread/65ab2c978204c3d8
 [doodle7]: http://doodle.com/dput2at7fd5cxptx
 [offline7]: https://groups.google.com/group/archlinuxvn/browse_thread/thread/dede51ded71e99b2
 [systemd-vi]: http://groups.google.com/group/archlinuxvn/browse_thread/thread/78876fb3a9890416
+[nutshell]: https://groups.google.com/group/archlinuxvn/browse_thread/thread/93b2b29c4fbe74e1
