--- a/content/vn/news.html
+++ b/content/vn/news.html
@@ -4,6 +4,8 @@ allow_comment: yes
 tags: ['archlinuxvn', 'offline', 'news']
 ---
 
+* *16/3/2013:* Họp mặt nhóm người dùng Archlinux tại Sài Gòn lần 8 [offline8] [offline8].
+
 * *21/2/2013:* Thêm `hạt dẻ` cho [kênh IRC](/vn/irc/). [Thông báo ở nhóm thư][nutshell].
 
 * *17/2/2013:* Bắt đầu dự án KenLinux. Xem ở [Ken FAQ](/ken/faq/).
@@ -40,3 +42,4 @@ tags: ['archlinuxvn', 'offline', 'news']
 [offline7]: https://groups.google.com/group/archlinuxvn/browse_thread/thread/dede51ded71e99b2
 [systemd-vi]: http://groups.google.com/group/archlinuxvn/browse_thread/thread/78876fb3a9890416
 [nutshell]: https://groups.google.com/group/archlinuxvn/browse_thread/thread/93b2b29c4fbe74e1
+[offline8]: https://groups.google.com/d/topic/archlinuxvn/7h_D5OgcGbM/discussion
