ken.faq: update (+ official name)

--- a/content/ken/faq.html
+++ b/content/ken/faq.html
@@ -4,6 +4,16 @@ tags: ['ken', 'g1', 'liveusb']
 allow_comment: yes
 ---
 
+----
+
+**Cập nhật**:  KenLinux đã có tên chính thức là **TheSLinux**. Thông tin
+về dự án các bạn vui lòng theo dõi ở một trong cách kênh sau
+
+  * Twitter: <http://twitter.com/theslinux>
+  * Trang chủ: <http://theslinux.org> _(đang xây dựng)_
+
+----
+
 Dòng thứ nhất của KenLinux.
 
 * TOC
@@ -11,8 +21,7 @@ Dòng thứ nhất của KenLinux.
 
 ## Tên KenLinux có nghĩa gì
 
-`Ken` chỉ là tên tạm. Tên chính thức sẽ được chọn sau. Nếu có một tên hay
-thì bạn hãy đề nghị.
+`Ken` chỉ là tên tạm. Tên chính thức là *TheSLinux*.
 
 ## KenLinux có gì đặc biệt
 
@@ -50,8 +59,7 @@ z1y, NgoHuy, và ... **bạn**
 ## Những việc gì cần làm
 
 * Tìm nguồn tài trợ để xây dựng máy biên dịch gói và nhân.
-  Xem thêm [Ken Builder](builder/)
-* Quản lý hệ thống, nhóm thư _(diễn đàn)_ và hệ thống `ticket`
+* Quản lý hệ thống, <s>nhóm thư _(diễn đàn)_</s> và <s>hệ thống `ticket`</s>
 * Hỗ trợ xây dựng `mirror` chính
 * Lập trình viên `Ruby`, `Bash` và `Haskell`
 * Tư vấn về an toàn của hệ thống
