vn.lists: fix typo

--- a/content/vn/lists.html
+++ b/content/vn/lists.html
@@ -13,9 +13,9 @@ Do nội dung của nhóm thư được công bố công cộng và còn lại m
 nhóm thư là kênh liên lạc đơn giản, hiệu quả nhưng cũng cần bạn cân
 nhắc nhiều hơn.
 
-## Các nhóm thư của ArchLinuxVn
+## Nhóm thư của ArchLinuxVn
 
-Có hai nhóm được cung cấp bởi GoogleGroups:
+Các nhóm được cung cấp bởi `Google Groups`:
 
 * [archlinuxvn] [list-main] là nơi trao đổi chung, giúp đỡ, thông báo;
 * [archlinuxvn-dot] [list-devel] là nơi trao đổi về các dự án của ArchLinuxVn;
