vn.list - archlinuxvn-ken (obsolete)

--- a/content/vn/lists.html
+++ b/content/vn/lists.html
@@ -19,16 +19,14 @@ Các nhóm được cung cấp bởi `Google Groups`:
 
 * [archlinuxvn] [list-main] là nơi trao đổi chung, giúp đỡ, thông báo;
 * [archlinuxvn-dot] [list-devel] là nơi trao đổi về các dự án của ArchLinuxVn;
-* [archlinuxvn-security] [list-security] để trao đổi về bảo mật và an toàn dữ liệu;
-* [archlinuxvn-ken] [list-ken] là nơi trao đổi về [Ken Linux](/ken/).
+* [archlinuxvn-security] [list-security] để trao đổi về bảo mật và an toàn dữ liệu.
 
 Để đăng ký vào các nhóm thư này, bạn có thể dùng giao diện web, hoặc
 gửi thư bất kỳ tới địa chỉ
 
 * <mailto:archlinuxvn+subscribe@googlegroups.com>,
 * <mailto:archlinuxvn-dot+subscribe@googlegroups.com>, hoặc
-* <mailto:archlinuxvn-security+subscribe@googlegroups.com>, hoặc
-* <mailto:archlinuxvn-ken+subscribe@googlegroups.com>.
+* <mailto:archlinuxvn-security+subscribe@googlegroups.com>.
 
 ## Quy tắc ứng xử
 
