Use HTTPS link for #webirc

--- a/content/vn/irc.html
+++ b/content/vn/irc.html
@@ -81,7 +81,7 @@ lý nào về `nội dung`; tuy  nhiên, người điều hành có thể giúp 
 chối hoặc nhắc nhở các thành viên sau khi có sự hội ý và thống nhất
 với các thành viên khác trên kênh.
 
-[webirc]: http://webchat.freenode.net/?randomnick=1&channels=archlinuxvn&prompt=1&uio=d4
+[webirc]: https://webchat.freenode.net/?randomnick=1&channels=archlinuxvn&prompt=1&uio=d4
 [bot]: /vn/bot/
 [irclog]: /irclogs/
 [freenode servers]: http://freenode.net/irc_servers.shtml
