--- a/content/vn/author-guide.html
+++ b/content/vn/author-guide.html
@@ -52,7 +52,7 @@ viết bài bằng cú pháp `markdown`. Thông tin bổ ích cho việc viết 
 
 3. Tạo một nhân bản của mã nguồn trang chủ bằng lệnh
 
-       git clone git@viettug.org:archlinuxvn
+       git clone git@ssh.viettug.org:archlinuxvn
 
    Nếu dùng `Github`, bạn xem qua tài liệu của `Github` về `forking`,
    và [xem vài lưu ý ở đây](#github)
