vn.irc: Add new moderator (Cooly)

--- a/content/vn/irc.html
+++ b/content/vn/irc.html
@@ -73,7 +73,7 @@ chẳng hạn [PostImage.org] [].
 ## Điều hành kênh
 
 `n0b0dy` là người đã đăng ký kênh ở `freenode`, mặc dù kênh đã hoạt động
-từ trước đó. Hai thành viên có quyền quản lý kênh là `n0b0dy` và `z1y`.
+từ trước đó. Các thành viên có quyền quản lý kênh là `Cooly`, `n0b0dy`, `z1y`.
 
 `Quản lý` ở đây được hiểu là nhằm xử lý các vấn đề kỹ thuật của kênh:
 các sự cố , cài đặt và điều chỉnh các `bot`, ... Không có bất kỳ sự quản
