--- a/content/vn/news.html
+++ b/content/vn/news.html
@@ -4,33 +4,26 @@ allow_comment: yes
 tags: ['archlinuxvn', 'offline', 'news']
 ---
 
+* */10/2013:* Làm áo mới (T-shirt) cho các thành viên ArchLinuxVn.
+  Xem chi tiết trên [nhóm thư][t-shirt-2013].
 * *16/3/2013:* Họp mặt nhóm người dùng Archlinux tại Sài Gòn lần 8 [offline8] [offline8].
-
 * *21/2/2013:* Thêm `hạt dẻ` cho [kênh IRC](/vn/irc/). [Thông báo ở nhóm thư][nutshell].
-
 * *17/2/2013:* Bắt đầu dự án KenLinux. Xem ở [Ken FAQ](/ken/faq/).
-
 * *30/1/2013:* Bắt đầu dự án biên dịch tài liệu `systemd`. Xem thông báo
    ở [nhóm thư] [systemd-vi].
-
 * *23/12/2012:* Họp mặt cuối năm 2012. Đăng ký tham gia có ở [doodle7] [].
   Thông báo trên nhóm thư có ở [offline7] [].
-
 * *16/9/2012:* [Họp mặt để nhận áo thun với logo ArchLinux] [offline6]
-
 * *29/7/2012:* Họp mặt nhóm người dùng ArchLinux tại Sài Gòn. Thời gian
   và địa điểm được thông báo ở [nhóm thư] [offline5].
-
 * *??/7/2012:* Họp mặt offline nhóm người dùng Linux tại Sài Gòn.
   Thời gian và địa điểm được thông báo ở [nhóm thư SaigonLug] [saigonlug].
-
 * *5/7/2012:* Thông báo gặp mặt trên [nhóm thư] [offline5]. Lựa chọn thời
   gian tham dự ở [Doodle] [doodle5].
   _Nội  dung:_
   * Trao đổi về cách viết bài cho trang chủ
   * Làm áo cho các thành viên.
   * Các vấn đề khác liên quan tới ArchLinux.
-
 * 1/7/2012: Ra mắt trang web mới. Nội dung tĩnh với phần bình luận hỗ trợ
   bở Disqus.
 
@@ -43,3 +36,4 @@ tags: ['archlinuxvn', 'offline', 'news']
 [systemd-vi]: http://groups.google.com/group/archlinuxvn/browse_thread/thread/78876fb3a9890416
 [nutshell]: https://groups.google.com/group/archlinuxvn/browse_thread/thread/93b2b29c4fbe74e1
 [offline8]: https://groups.google.com/d/topic/archlinuxvn/7h_D5OgcGbM/discussion
+[t-shirt-2013]: https://groups.google.com/forum/?_escaped_fragment_=topic/archlinuxvn/inf9cxY_t58
