--- a/content/vn/news.html
+++ b/content/vn/news.html
@@ -4,7 +4,7 @@ allow_comment: yes
 tags: ['archlinuxvn', 'offline', 'news']
 ---
 
-* *12/2013:* [offline9][Offline cuối cùng của năm 2013]
+* *12/2013:* [Offline cuối cùng của năm 2013] [offline9].
 * */10/2013:* Làm áo mới (T-shirt) cho các thành viên ArchLinuxVn.
   Xem chi tiết trên [nhóm thư][t-shirt-2013].
 * *16/3/2013:* Họp mặt nhóm người dùng Archlinux tại Sài Gòn lần 8 [offline8] [offline8].
