vn.members.workers: update list of maintainers

--- a/content/vn/members/workers.html
+++ b/content/vn/members/workers.html
@@ -11,13 +11,12 @@ tags: ['archlinuxvn', 'contributor']
 
 Dưới đây là danh sách thành viên với những nhiệm vụ cụ thể.
 Các thành viên được biết quá `nick` trên các kênh như `IRC` hay nhóm thư.
-Bạn luôn có thể liên hệ với họ thông qua các kênh chính thức của ArchLinuxVn.
 
-* Nhóm thư chính: NgoHuy, n0b0dy, z1y
+* Nhóm thư chính: NgoHuy, n0b0dy, z1y, stk
 * Trang chủ _(hai mirror)_: z1y
-* Facebook FanPage: NgoHuy, z1y
+* Facebook FanPage: NgoHuy, z1y, xluffy, stk
 * Git repo: z1y
-* Kênh IRC: n0b0dy, z1y
+* Kênh IRC: n0b0dy, z1y, Cooly, kitarousa
 
 ## Cần bạn giúp đỡ {#help}
 
