vn.news: fix typo in anchor name

--- a/content/vn/news.html
+++ b/content/vn/news.html
@@ -52,4 +52,4 @@ tags: ['archlinuxvn', 'offline', 'news']
 [offline8]: https://groups.google.com/d/topic/archlinuxvn/7h_D5OgcGbM/discussion
 [t-shirt-2013]: https://groups.google.com/forum/?_escaped_fragment_=topic/archlinuxvn/inf9cxY_t58
 [offline9]: https://groups.google.com/forum/?_escaped_fragment_=topic/archlinuxvn/DPkAGviV-5Q
-[offfline10]: https://groups.google.com/forum/?_escaped_fragment_=topic/archlinuxvn/09Hb92mxrwU
+[offline10]: https://groups.google.com/forum/?_escaped_fragment_=topic/archlinuxvn/09Hb92mxrwU
