vn.irc: Update list of maintainers

--- a/content/vn/irc.html
+++ b/content/vn/irc.html
@@ -21,7 +21,7 @@ giao tiếp chạy trong cửa sổ dòng lệnh_ rất thích hợp với nhữ
 * Thời gian: nhiều thành viên có mặt trên kênh trong giờ làm việc
   ở Việt Nam (9h sáng - 5 giờ chiều).
 * Bot: Xem thông tin ở [bot] []
-* Quản lý kênh: `z1y`, `n0b0dy`
+* Quản lý kênh: `z1y`, `n0b0dy`, `kitarousa`, `Cooly`
 * [Giao diện web] [webirc]
 
 ## Giao diện web của kênh
