vn.lists: Strike-out some unused lists

--- a/content/vn/lists.html
+++ b/content/vn/lists.html
@@ -18,15 +18,15 @@ nhắc nhiều hơn.
 Các nhóm được cung cấp bởi `Google Groups`:
 
 * [archlinuxvn] [list-main] là nơi trao đổi chung, giúp đỡ, thông báo;
-* [archlinuxvn-dot] [list-devel] là nơi trao đổi về các dự án của ArchLinuxVn;
+* <s>[archlinuxvn-dot] [list-devel] là nơi trao đổi về các dự án của ArchLinuxVn;</s>
 * [archlinuxvn-security] [list-security] để trao đổi về bảo mật và an toàn dữ liệu.
 
 Để đăng ký vào các nhóm thư này, bạn có thể dùng giao diện web, hoặc
 gửi thư bất kỳ tới địa chỉ
 
 * <mailto:archlinuxvn+subscribe@googlegroups.com>,
-* <mailto:archlinuxvn-dot+subscribe@googlegroups.com>, hoặc
-* <mailto:archlinuxvn-security+subscribe@googlegroups.com>.
+* <s><mailto:archlinuxvn-dot+subscribe@googlegroups.com>, hoặc</s>
+* <s><mailto:archlinuxvn-security+subscribe@googlegroups.com>.</s>
 
 ## Quy tắc ứng xử
 
