vn.lists: Strike-out the :security list

--- a/content/vn/lists.html
+++ b/content/vn/lists.html
@@ -19,7 +19,7 @@ Các nhóm được cung cấp bởi `Google Groups`:
 
 * [archlinuxvn] [list-main] là nơi trao đổi chung, giúp đỡ, thông báo;
 * <s>[archlinuxvn-dot] [list-devel] là nơi trao đổi về các dự án của ArchLinuxVn;</s>
-* [archlinuxvn-security] [list-security] để trao đổi về bảo mật và an toàn dữ liệu.
+* <s>[archlinuxvn-security] [list-security] để trao đổi về bảo mật và an toàn dữ liệu.</s>
 
 Để đăng ký vào các nhóm thư này, bạn có thể dùng giao diện web, hoặc
 gửi thư bất kỳ tới địa chỉ
