--- a/content/vn/skype.html
+++ b/content/vn/skype.html
@@ -27,7 +27,7 @@ Các thành viên quản lý kênh là `kyanh.314` và `xquang.foss`
 Bao gồm các [quy tắc trên kênh IRC](/vn/irc/#quy-tac-ung-xu).
 
 Các thành viên không có trao đổi nào liên tục trong thời gian 2 tháng
-sẽ được người điều hành xóa tên của kênh.
+sẽ được người điều hành xóa tên khỏi kênh.
 
 ## Các vấn đề
 
