vn.skype: Fix typo

--- a/content/vn/skype.html
+++ b/content/vn/skype.html
@@ -41,8 +41,8 @@ Dùng kênh Skype có nhiều điểm khác biệt so với kênh `irc`
 3. **Topic:** Tất cả các thành viên trong kênh đều có thể đặt `topic`
   cho kênh. Tuy nhiên, đừng làm như vậy nếu bạn không có quyền điều hành kênh.
 4. **Lệnh:** [Skype cũng hỗ trợ nhiều lệnh][skype.commands]
-5. **Thông báo:** Nếu bạn đang làm việc thì cách thành viên khác có thể
-  làm bạn mất tập trung. Hay sử dụng các lệnh `alertsoff` hoặc `alertson`
+5. **Thông báo:** Nếu đang làm việc thì cách thành viên khác có thể
+  làm bạn mất tập trung. Hãy sử dụng các lệnh `alertsoff` hoặc `alertson`
   một cách thông minh. Xem chi tiết ở [hướng dẫn của skype][skype.commands]
 
 Không có gì là tuyệt đối hay. Nên hãy trải nghiệm nếu bạn thấy thích hợp.
