vn.bot: fix typo

--- a/content/vn/bot.html
+++ b/content/vn/bot.html
@@ -11,7 +11,7 @@ tags: ['irc', 'chat', 'archlinuxvn']
 * `l00s3r-bot`: [Mã nguồn] [botsrc]
 * `l00s3rloggger`: Chạy trên máy `l00s3r`. [Mã nguồn] [botlogger]
 * `l00s5rloggger`: Như `l00s3rlogger`, chạy trên máy `l00s5r`
-* `l00s7rloggger`: Như `l00s3rlogger`, chạy trene máy `l00s7r`
+* `l00s7rloggger`: Như `l00s3rlogger`, chạy trên máy `l00s7r`
 
 _(Riêng `l00s5rlogger` chỉ nhằm mục đích theo dõi máy `l00s5r`,
 không lưu trữ `log` của kênh)_
