vn/members: update and clean up lists of members. Add :electr0n

--- a/content/vn/members/index.html
+++ b/content/vn/members/index.html
@@ -17,13 +17,12 @@ Danh sách này không đầy đủ và được dùng minh họa cho một số
 bộ cài đặt ArchLinux. Bạn có thể liên hệ những người quản lý để
 thêm vào dánh sách này.
 
-* **Sinh viên:**
-    [n0b0dy], [NgoHuy] [], luffy,
-    VHNgoc, [redlotus] [], Mitsuki, BiAlan
-* **Giáo viên:** tanphu, lamhuuphuoc
-* **Lập trình viên:** zosolz, gialong, fta
-* **Điều hành hệ thống:** [stk] [], [KyAnh] [], Cooly
-* **Khác:** cube, longgia2001, rmrf, Minh Nhật, n0bawk, favadi
+> [n0b0dy][], [NgoHuy] [], xluffy, VHNgoc, [redlotus] [],
+> Mitsuki, BiAllan, tanphu, lamhuuphuoc, zosols, gialong, fta, stanley00,
+> electr0n, jcisio, gialong, fta, [stk] [], [KyAnh] [], Cooly,
+> longgia2001, rmrf, n0bawk, favadi
+
+(các thành viên được liệt kê ngẫu nhiên.)
 
 ## Máy dùng ArchLinux
 
@@ -43,7 +42,7 @@ _(Phần nội dung này đã được gỡ bỏ ngày 27/2/2014 do nội dung k
       | grep -vE '(firmware|header)'
 
 [stk]: http://projektantos.wordpress.com/
-[KyAnh]: /blog/~icy/
+[KyAnh]: http://icy.theslinux.org/
 [NgoHuy]: /blog/~huy/
 [redlotus]: /blog/~redlotus/
 [l00s3r]: http://viettug.org/
