--- a/content/vn/bot.html
+++ b/content/vn/bot.html
@@ -8,10 +8,10 @@ tags: ['irc', 'chat', 'archlinuxvn']
 
 Ở [kênh IRC nhóm] [irc], có các `bot` sau đây
 
-* `l00s3r-bot`: [Mã nguồn] [botsrc]
-* `l00s3rloggger`: Chạy trên máy `l00s3r`. [Mã nguồn] [botlogger]
-* `l00s5rloggger`: Như `l00s3rlogger`, chạy trên máy `l00s5r`
-* `l00s7rloggger`: Như `l00s3rlogger`, chạy trên máy `l00s7r`
+* `l00s9rbot`: [Mã nguồn] [botsrc]
+* `l00s9rloggger`: Chạy trên máy `l00s9r`. [Mã nguồn] [botlogger]
+* `l00s5rloggger`: Như `l00s9rlogger`, chạy trên máy `l00s5r`
+* `l00s7rloggger`: Như `l00s9rlogger`, chạy trên máy `l00s7r`
 
 _(Riêng `l00s5rlogger` chỉ nhằm mục đích theo dõi máy `l00s5r`,
 không lưu trữ `log` của kênh)_
@@ -20,7 +20,7 @@ Mục đích của bot là cung cấp vài gợi ý, ghi nhớ và giúp đỡ, 
 số từ không thích hợp trên kênh, để lưu trữ `log`, và là một cách đơn giản
 để theo dõi tình trạng hoạt động của các máy phục vụ.
 
-## Bot nhiều chuyện `l00s3r-bot`
+## Bot nhiều chuyện `l00s9rbot`
 
 Bot có nhiều plugin khác nhau. Để biết thêm chi tiết, bạn gõ vào lệnh
 `!help` hoặc `!help <plugin_name>` khi đang ở trong kênh `#archlinuxvn`.
